[tool.poetry]
name = "agora_broadcasting"
version = "0.1.0"
description = ""
authors = ["samyak-jain <samtan106@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tornado = "^6.0"
python-dotenv = "^0.10.1"
motor = "^2.0"

[tool.poetry.dev-dependencies]
mypy = "^0.670.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
